3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

common/anim.c: Patch by AV to make sure multipart monsters animations
   stay in sync.  MSW 2003-05-25

server/apply.c: Fix bug in that we weren't calling esrv_map_scroll()
   when player used a shop map but lacked sufficient funds to pay
   for his items.
MSW 2002-05-23

common/item.c, common/utils.c, include/config.h: Add #define NEW_MATERIAL_CODE
   and checks in the other files for this - if this is commented out
   (default), then the new material naming code is disabled - material
   names won't be put in the items names as shown in the inventory
   (can still see material by examining an object), and objects that are
   created will be created with the default material (eg, iron for
   most armor/weapons, eg, brass, bronze, copper items won't show
   up anymore).
lib/settings: Add comments from the old config.h file that describes
   what the options already does.  Having no comments in this file
   or in config.h anymore is very unfriendly.
MSW 2003-05-20

server/player.c: Have players start at max hp/grace/sp.
MSW 2003-04-14

server/c_range.c: Add check to make sure we are actually removing a
   golem and that the object hasn't been freed/recycled and the
   player not updated.  Fixes crashes.
MSW 2003-04-13

acinclude.m4: Update path to find python includes, since aclocal.m4 gets 
   derived from this file.
configure.ac, configure: Add utils/scores.pl to list of files to substitute on.
common/loader.l, loader.c: Add subtype for objects - will be used in future work.
common/object.c: Add subtype diff check in CAN_MERGE()
common/porting.c: Have it use SAVE_DIR_MODE when doing the mkdir, and not have