@@ -17,6 +17,12 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for CVS:
 
+common/map.c: Fix bug causing unnecessary crashes - ok for the map
+    to match if the object has been removed.
+socket/loop.c: Only make call to draw_client_map() if we have a valid
+    map to draw.
+MSW 2003-05-26
+
 common/anim.c: Patch by AV to make sure multipart monsters animations
    stay in sync.  MSW 2003-05-25
 
